# Neusicplus

./: CMakeLists.txt  README.md  index.html
.github/workflows/: build.yml  pages.yml
Source/: AudioEngine.cpp  AudioEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h
docs/: INSTALL_ON_IPHONE_FREE.md
preview/: index.html
scripts/: generate-ios-xcode.sh
